--- a/data/train_Efield_pot.yaml
+++ b/data/train_Efield_pot.yaml
@@ -11,7 +11,7 @@ dataset:
   valid_num: 1000
   n_node: 1500
   n_edge: 9000
-  n_graph: 10
+  n_graph: 50
   seed: 7
   loader_seed: 5678
   #valid_fraction: null
@@ -20,14 +20,14 @@ dataset:
 model:
   #normalization_constant: 8.0
   num_layers: 2
-  internal_irreps:  64x0e + 64x0o + 48x1o + 48x1e +32x2o + 32x2e       #  32x0e + 32x0o +24x1e + 24x1o + 16x2e +16x2o #   64x0e + 64x0o + 48x1o + 48x1e +32x2o + 32x2e   #32x0e + 32x0o +24x1e + 24x1o + 16x2e +16x2o   #64x0e + 64x0o + 48x1o + 48x1e +32x2o + 32x2e
+  internal_irreps:  64x0e + 64x0o + 48x1o + 48x1e +32x2o + 32x2e
   alpha: 0.1
   seed: 777
   num_species: 100
 
 training:
   learning_rate: 0.01
-  steps_per_interval: 100
+  steps_per_interval: 1000
   max_num_intervals: 30
   ema_decay: 0.995
   patience: 3000
