--- a/data/train_becseps.yaml
+++ b/data/train_becseps.yaml
@@ -19,7 +19,7 @@ dataset:
 model:
   #normalization_constant: 27.992
   num_layers: 3
-  internal_irreps: 96x0e+ 96x0o  + 64x1e +64x1o +48x2e +48x2o # 48x0e + 48x0o + 32x1o + 32x1e +24x2o + 24x2e
+  internal_irreps: 48x0e + 48x0o + 32x1o + 32x1e +24x2o + 24x2e
   alpha: 0.1
   seed: 777
   num_species: 100
@@ -28,12 +28,9 @@ model:
 training:
   learning_rate: 0.005
   steps_per_interval: 500
-  max_num_intervals: 300
+  max_num_intervals: 30
   ema_decay: 0.99
   patience: 3000
-  #energy_weight: 10.0
-  #forces_weight: 70.0
-  #stress_weight: 0.0
   becs_weight: 5.0
   becs_sum_weight: 1.0
   eps_weight: 0.0
